--- a/components/tag-list/tag-list.module.scss
+++ b/components/tag-list/tag-list.module.scss
@@ -28,23 +28,6 @@
       margin-right: 0;
     }
 
-    &.dark-1 {
-      background-color: $dark-1;
-    }
-
-    &.dark-2 {
-      background-color: $dark-2;
-    }
-
-    &.light-1 {
-      background-color: $light-1;
-    }
-
-    &.light-2 {
-      color: $dark-1;
-      background-color: $light-2;
-    }
-
     svg {
       height: 100%;
       margin-right: 0.5em;
